--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 beautifulsoup4==4.5.3
+boto==2.46.1
+bz2file==0.98
 chardet==2.3.0
 funcsigs==1.0.2
+gensim==1.0.0
 h5py==2.6.0
 html5lib==0.999999999
 Keras==1.2.2
+lxml==3.7.3
 mock==2.0.0
 numpy==1.12.0
 pandas==0.19.2
@@ -12,10 +16,12 @@ protobuf==3.2.0
 python-dateutil==2.6.0
 pytz==2016.10
 PyYAML==3.12
+requests==2.13.0
 scikit-learn==0.18.1
 scipy==0.18.1
 six==1.10.0
 sklearn==0.0
+smart-open==1.4.0
 tensorflow==1.0.0
 Theano==0.8.2
 webencodings==0.5
